# vinting-server

./: .gitignore  .gitmodules  Cargo.toml  README.md  Rocket.toml  build.rs
.github/workflows/: build.yml  build_test.yml  test.yml
dtos/: Cargo.toml
dtos/src/: email_string.rs  lib.rs  limited_string.rs
dtos/src/category/: get.rs  post.rs  put.rs
dtos/src/image/: get.rs  mod.rs  post.rs  put.rs
dtos/src/order/: get.rs  mod.rs  post.rs  put.rs
dtos/src/product/: get.rs  post.rs  put.rs
dtos/src/product_category/: get.rs  post.rs  put.rs
dtos/src/product_image/: get.rs  post.rs  put.rs
dtos/src/product_tag/: get.rs  post.rs  put.rs
dtos/src/tag/: get.rs  mod.rs  post.rs  put.rs
dtos/src/user/: get.rs  post.rs  put.rs
entity/: Cargo.toml
entity/src/: category.rs  image.rs  lib.rs  order.rs  prelude.rs  product.rs  product_category.rs  product_image.rs  product_order.rs  product_tag.rs  tag.rs  user.rs
entity/src/service/: filter.rs  mod.rs
services/: Cargo.toml
services/src/: category_service.rs  image_service.rs  lib.rs  order_service.rs  product_category_service.rs  product_image_service.rs  product_service.rs  product_tag_service.rs  tag_service.rs  user_service.rs
services/src/service_trait/: filter.rs  mod.rs
src/: constants.rs  database.rs  dotenv.rs  file_server.rs  lib.rs  main.rs  responder.rs  routable_file_server.rs
src/entity/: mod.rs
src/routes/: mod.rs
src/routes/categories/: delete.rs  get.rs  mod.rs  post.rs  put.rs
src/routes/tags/: delete.rs  get.rs  mod.rs  post.rs  put.rs
src/routes/users/: get.rs  jwt.rs  mod.rs  post.rs
src/services/: category_service.rs  image_service.rs  mod.rs  order_service.rs  product_category_service.rs  product_image_service.rs  product_service.rs  product_tag_service.rs  tag_service.rs  user_service.rs
