[package]
name = "vinting-server"
version = "0.1.0"
edition = "2024"

build = "./build.rs"

[workspace]
members = ["dtos", "entity", "services"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

unwrap_used = "deny"
needless_match = "deny"
redundant_pattern = "deny"

[build-dependencies]
cargo-build = "1.0.0"

[workspace.dependencies]
sea-orm = { version = "2.0.0-rc.30", features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
  "macros",
  "entity-registry",
  "schema-sync",
] }
anyhow = "1.0.100"
thiserror = "2.0.18"
serde = "1.0.228"
log = "0.4.29"
# all crates part of password_hash are undergoing a major version bump of the rand crate,
# which breaks the api, notably it removes OsRng, which is a big part of how you currently hash passwords
argon2 = "0.6.0-rc.7"

[dependencies]
entity = { path = "./entity" }
dtos = { path = "./dtos" }
services = { path = "./services" }

sea-orm = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
argon2 = { workspace = true }

rocket = { version = "0.5.1", features = ["secrets", "json"] }
tokio = { version = "1.49.0", features = ["full"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
chrono = "0.4.44"
dotenvy = "0.15.7"
