[package]
name = "entity"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
sea-orm = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["test-util", "macros"] }
sea-orm = { workspace = true, features = ["mock"] }
